# feishu-knowledge-rag

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
backend/: __init__.py
backend/app/: main.py
backend/app/core/: config.py  hashing.py
backend/app/db/: __init__.py  schema.sql  sqlite.py
backend/app/routes/: health.py  rag.py  reindex.py  sources.py  sync.py
backend/app/schemas/: __init__.py  rag.py
backend/app/services/: chunker.py  embedding.py  feishu.py  llm.py  rag.py  repository.py  reranker.py  sync_service.py  vector_store.py  weekly_scheduler.py
deploy/milvus/: docker-compose.yml
deploy/reranker/: app.py  pyproject.toml
docs/: development-plan.md  local-model-audit.md  model-service-split-brief.md  technical-solution.md
frontend/: .env.example  eslint.config.mjs  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx  styles.css
scripts/: check-local-services.sh  dev-backend.sh  dev-frontend.sh  download-models.sh  install-llamacpp-macos.sh  start-bge-m3.sh  start-gemma-llamacpp.sh  start-qwen-llamacpp.sh  start-reranker.sh
tests/: test_chat_routing.py  test_chunker.py  test_config.py  test_feishu_client.py  test_multi_account.py  test_rag_routes.py  test_reranker_client.py  test_sqlite_schema.py  test_sync_routes.py  test_sync_service.py  test_weekly_scheduler.py
