[project]
name = "feishu-knowledge-rag"
version = "0.1.0"
description = "Local-first Feishu knowledge base RAG with bge-m3, Milvus, bge-reranker, and Qwen GGUF."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.32,<0.33",
  "pydantic-settings>=2.6,<3",
  "httpx>=0.27,<0.28",
  "pymilvus>=2.5,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<0.25",
  "ruff>=0.8,<0.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
